# gitBahn

./: .gitignore  .mcp.json  Cargo.toml  README.md
.claude-plugin/: marketplace.json  plugin.json
commands/: atomic.md  commit.md  granular.md  realistic.md  setup.md
gitbahn-mcp/: Cargo.toml  README.md
gitbahn-mcp/src/: main.rs
src/: config.rs  main.rs
src/commands/: auto.rs  commit.rs  docs.rs  init.rs  merge.rs  mod.rs  push.rs  review.rs  rewrite.rs  status.rs  undo.rs
src/core/: ai.rs  git.rs  lock.rs  mod.rs  secrets.rs  tests.rs  watcher.rs
