[package]
name = "gitBahn"
version = "0.1.0"
edition = "2021"
description = "Autonomous Git operations with AI-powered commits, merges, and code rewriting"
authors = ["naruto"]
license = "MIT"

[[bin]]
name = "bahn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
git2 = "0.18"
reqwest = { version = "0.11", features = ["json"] }
colored = "2.1"
dialoguer = "0.11"
indicatif = "0.17"
dirs = "5.0"
