[package]
name = "gitbahn-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for gitBahn - realistic git commits for AI-assisted development"
license = "MIT"

[[bin]]
name = "gitbahn-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.9", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
anyhow = "1"
